--- a/fuzz/package.json
+++ b/fuzz/package.json
@@ -5,7 +5,9 @@
   "type": "commonjs",
   "scripts": {
     "start": "jsfuzz src/index.cjs corpus",
-    "report": "nyc report --per-file --exclude-after-remap=false"
+    "start:fast": "jsfuzz src/fast.cjs corpus",
+    "report": "nyc report --per-file --exclude-after-remap=false",
+    "report:html": "nyc report --reporter=html --per-file --exclude-after-remap=false"
   },
   "devDependencies": {
     "jsfuzz": "^1.0.15"
